--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     ]
   },
   "dependencies": {
+    "@types/styled-components-react-native": "^5.1.3",
     "react": "18.0.0",
-    "react-native": "0.69.1"
+    "react-native": "0.69.1",
+    "styled-components": "^5.3.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
