--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-plugin-import": "2.25.3",
+    "eslint-plugin-import-helpers": "^1.2.1",
     "eslint-plugin-jsx-a11y": "6.5.1",
     "eslint-plugin-react": "7.28.0",
     "eslint-plugin-react-hooks": "4.3.0",
     "husky": "^8.0.0",
+    "install": "^0.13.0",
     "jest": "^26.6.3",
     "lint-staged": "^13.0.3",
     "metro-react-native-babel-preset": "^0.70.3",
